added colours stacksqueue now working added reset (play more than once) functionality

--- a/Rummy/Rummy.vcxproj.filters
+++ b/Rummy/Rummy.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="classes.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="console.h">
+    <ClInclude Include="console_h.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
