--- a/Rummy/Rummy.vcxproj
+++ b/Rummy/Rummy.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="classes.h" />
     <ClInclude Include="console_h.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
