alea alea cu melding la first si acum poti sa si rupi

--- a/Rummy/Rummy.vcxproj
+++ b/Rummy/Rummy.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="classes.cpp" />
     <ClCompile Include="Rummy.cpp" />
   </ItemGroup>
   <ItemGroup>
