Started PlayerBot Let's just hope god is w me sort and formations combo done. working on "other tiles"

--- a/Rummy/Rummy.vcxproj
+++ b/Rummy/Rummy.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="classes.h" />
     <ClInclude Include="console_h.h" />
+    <ClInclude Include="playerbot.h" />
     <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
