PROJECT DONE RAWR <3

--- a/Rummy/Rummy.vcxproj.filters
+++ b/Rummy/Rummy.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Rummy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="classes.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="classes.h">
@@ -38,5 +35,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="test_heh.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
