--- a/Rummy/Rummy.vcxproj
+++ b/Rummy/Rummy.vcxproj
@@ -127,7 +127,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="classes.cpp" />
     <ClCompile Include="Rummy.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="test_heh.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
